Add ability to create, update, destroy user

--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -50,6 +50,14 @@ div {
   color: green;
 }
 
+#warning {
+  color: orange;
+}
+
+#alert {
+  color: red;
+}
+
 .field_with_errors {
   padding: 2px;
   background-color: red;
