--- a/app/views/users/_edit_form.html.erb
+++ b/app/views/users/_edit_form.html.erb
@@ -12,17 +12,17 @@
   <% end %>
 
   <div class="field">
-    <%= form.label :first_name %>
+    <%= form.label :first_name, 'First Name' %>
     <%= form.text_field :first_name %>
   </div>
 
   <div class="field">
-    <%= form.label :last_name %>
+    <%= form.label :last_name, 'Last Name' %>
     <%= form.text_field :last_name %>
   </div>
 
   <div class="field">
-    <%= form.label :old_password %>
+    <%= form.label :old_password, 'Old Password' %>
     <%= form.password_field :old_password %>
   </div>
 
@@ -32,7 +32,7 @@
   </div>
 
   <div class="field">
-    <%= form.label :password_confirmation %>
+    <%= form.label :password_confirmation, 'Password Confirmation' %>
     <%= form.password_field :password_confirmation %>
   </div>
 
