--- a/app/views/users/_new_form.html.erb
+++ b/app/views/users/_new_form.html.erb
@@ -12,12 +12,12 @@
   <% end %>
 
   <div class="field">
-    <%= form.label :first_name %>
+    <%= form.label :first_name, 'First Name' %>
     <%= form.text_field :first_name %>
   </div>
 
   <div class="field">
-    <%= form.label :last_name %>
+    <%= form.label :last_name, 'Last Name' %>
     <%= form.text_field :last_name %>
   </div>
 
@@ -37,7 +37,7 @@
   </div>
 
   <div class="field">
-    <%= form.label :password_confirmation %>
+    <%= form.label :password_confirmation, 'Password Confirmation' %>
     <%= form.password_field :password_confirmation %>
   </div>
 
